miniextendr-macros/tests/ui/impl_r6_private_wrong_system.stderr
error: #[r6(private)] is only valid for R6 class systems
  --> tests/ui/impl_r6_private_wrong_system.rs:11:8
   |
11 |     fn value(&self) -> i32 {
   |        ^^^^^
